# palimpsest

./: .gitignore  .gitmodules  README.md  config.example.yaml  main.py  progress.md  pyproject.toml  runtime-agent-refactor-notes.md  self-evolving-agent-architecture-design-v3.docx.md  self-evolving-agent-architecture-design.docx.md
docs/: architecture.md  changelog-2026-03-19-runtime-tightening.md  design.md  llm-gateway-enhancements.md  role-migration-checklist.md
docs/adr/: 006-code-defined-architecture.md
examples/: hello-world.yaml  readme-example.yaml
palimpsest/: cli.py  config.py  emitter.py  events.py  prompts.py  runner.py
palimpsest/gateway/: __init__.py  llm.py  tool_loader.py  tools.py
palimpsest/runtime/: __init__.py  capability.py  context.py  contexts.py  event_gateway.py  github_client.py  interfaces.py  llm.py  mock_llm.py  permissions.py  resolver.py  retry_utils.py  role_resolver.py  roles.py  tools.py  (+3 more)
prompts/: default.md
test/: config.example.yaml
tests/: conftest.py  test_artifact_runtime_smoke.py  test_capability.py  test_cli_container_entrypoint.py  test_composite_gateway.py  test_config.py  test_context.py  test_context_loader.py  test_e2e_external_events.py  test_evo_tools.py  test_finalization.py  test_github_client.py  test_interaction_loop_exit.py  test_interaction_terminal.py  test_llm_gateway_budget.py  test_observation_context.py  test_observation_emission.py  test_optimizer_role_discovery.py  test_publication.py  test_resolver.py  test_role_resolution.py  test_roles.py  test_runner_context.py  test_runner_runtime_events.py  test_runner_team.py  test_team_manager_team_aware.py  test_tool_injection.py  test_tool_loader.py  test_tool_pattern.py  test_tool_resolution.py  test_tool_result.py  test_workspace.py
(+18 files in other folders)
