[project]
name = "palimpsest"
version = "0.1.0"
description = "Self-evolving autonomous agent for software engineering tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "litellm>=1.30",
    "gitpython>=3.1",
    "loguru>=0.7",
    "click>=8.1",
]

[project.scripts]
palimpsest = "palimpsest.cli:main"
