[project]
name = "palimpsest"
version = "0.2.0"
description = "Self-evolving agent system with separated Runtime (skeleton) and evolvable repository (muscle)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "litellm>=1.30",
    "gitpython>=3.1",
    "loguru>=0.7",
    "click>=8.1",
]

[project.scripts]
palimpsest = "palimpsest.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["palimpsest*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
